macrotable/tests/ui/err/row_arity_mismatch.stderr
error: this row provides 1 value, but the binding pattern expects 2
 --> tests/ui/err/row_arity_mismatch.rs:4:31
  |
4 |     repeat!((#T, #value) in [(u8)] {
  |                               ^^
